tests/ui/pattern/issue-72565.stderr
error: trait object `dyn PartialEq<u32>` cannot be used in patterns
  --> $DIR/issue-72565.rs:6:9
   |
LL | const F: &'static dyn PartialEq<u32> = &7u32;
   | ------------------------------------ constant defined here
...
LL |         F => panic!(),
   |         ^ trait object can't be used in patterns

error: aborting due to 1 previous error

